--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
     <title>PAGE TITLE HERE</title>
     <link rel="stylesheet" href="/assets/styles.css">
     <link rel="stylesheet" href="/assets/output.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script src="/assets/js/import-html.js"></script>
 </head>
 <body>
