--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <head>
-    <title>PAGE TITLE HERE</title>
+    <title>IzWrites</title>
     <link rel="stylesheet" href="/assets/styles.css">
     <link rel="stylesheet" href="/assets/output.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
@@ -7,10 +7,6 @@
 </head>
 <body>
     <div class="HeaderImport"></div>
-    <div class="MenuImport"></div>
-    <div class="PageContent">
-        BODY GOES HERE
-    </div>
-    <div class="MenuImport"></div>
+    <div class="PostListImport p-10"></div>
     <div class="FooterImport"></div>
 </body>
