--- a/universal-assets/header.html
+++ b/universal-assets/header.html
@@ -1,5 +1,5 @@
 <a href="/">
-    <div class="w-1/2 mx-auto text-center p-8">
+    <div class="w-4/12 mx-auto text-center mt-2 p-8 rounded-lg border border-black">
         <h1 class="font-mono text-5xl">IzWrites</h1>
         <h2 class="font-mono text-xl">A Blog by Michael Martin</h2>
     </div>
